# advent-of-code

./: .clang-format  .gitignore  .travis.yml  2017-20-notes.ods  README.md  build.gradle  day-2.py  day-3.py
2016/: .gitattributes  01.py  02.py  03.py  04.py  05.py  06.py  08.py  09.py  12.py  13.py  20.py  21.py  22.py  24.py  advent.py
2016/input/puzzle/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  08.txt  09.txt  12.txt  20.txt  21.txt  22.txt  24.txt
2016/input/sample/: 01.txt  02.txt  03.txt  04.txt  06.txt  08.txt  09.txt  12.txt  20.txt  21.txt  22.txt  24.txt
2016/output/puzzle/: 05.txt
2016/output/sample/: 05.txt  08.txt
2017/src/: Solution1.kt  Solution2.kt
2017/src/main/kotlin/com/bernardosulzbach/advent/: Particle.kt  Point.kt  Solution201701.kt  Solution201702.kt  Solution201703.kt  Solution201704.kt  Solution201705.kt  Solution201706.kt  Solution201707.kt  Solution201708.kt  Solution201709.kt  Solution201710.kt  Solution201711.kt  Solution201712.kt  Solution201713.kt  Solution201714.kt  Solution201715.kt  Solution201716.kt  Solution201718.kt  Solution201719.kt  Solution201720.kt  ThreeVector.kt
2017/src/test/kotlin/com/bernardosulzbach/advent/: Solution201703Test.kt  Solution201709Test.kt  Solution201710Test.kt  Solution201718Test.kt  Solution201719Test.kt
2018/: Cargo.toml
2018/advent-of-code-2018/: Cargo.toml
2018/advent-of-code-2018/input/: 1.txt  2.txt
2018/advent-of-code-2018/src/: main.rs
2018/input/: 04.txt  07.txt  3.txt
2018/input/puzzle/: 05.txt  06.txt  08.txt  09.txt  10.txt  12.txt  13.txt  16.txt  17.txt  18.txt
2018/input/sample/: 08.txt  09.txt  11.txt  12.txt  13.txt  16.txt  17.txt  18.txt
2018/output/: 02.txt  03.txt  04.txt  10.txt
2018/output/puzzle/: 01.txt  05.txt  06.txt  07.txt  08.txt  09.txt  17.txt  18.txt
2018/output/sample/: 09.txt  17.txt  18.txt
2018/src/lib/: advent.rs
2019/: CMakeLists.txt  run.sh
2019/output/: 01.txt  02.txt  03.txt  05.txt  06.txt
2019/output/puzzles/: 01-1.txt  01-2.txt  02-1.txt  05-1.txt  05-2.txt  08-2.txt  09-1.txt  11-2.txt  12-2.txt  21-1.txt  24-1.txt
2019/samples/: 02.txt
2019/scripts/: format.sh
2019/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  19.cpp  21.cpp  22.cpp  24.cpp  ArgumentParser.cpp  ArgumentParser.hpp  Body.cpp  BugScan.cpp  DirectedGraph.cpp  Direction.cpp  Direction.hpp  Filesystem.cpp  Filesystem.hpp  Intcode.cpp  Intcode.hpp  Math.hpp  OrbitGraph.cpp  Path.hpp  Point.hpp  Robot.cpp  Robot.hpp  Runner.cpp  Screen.hpp  (+3 more)
2020/: CMakeLists.txt
2020/input/puzzles/: 18-2.txt
2020/output/puzzles/: 01-2.txt  03-2.txt  09-1.txt  09-2.txt  14-1.txt  14-2.txt  16-2.txt  18-1.txt  21-2.txt  23-1.txt  24-2.txt  25-1.txt
2020/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  Runner.cpp
2022/: .formatter.exs  README.md  make-outputs.py  mix.exs
2022/lib/: 01.ex  02.ex  03.ex  04.ex  05.ex  06.ex  08.ex  10.ex  11.ex  13.ex  25.ex  common.ex  runner.ex
2022/output/puzzles/: 05-1.txt  05-2.txt  11-2.txt  25-1.txt
2022/output/samples/: 06-2.txt
2023/src/: 01-1.hs  01-2.hs  02-1.hs  02-2.hs  AoC.hs  Day02.hs
common/: CMakeLists.txt
common/CMake/: MoreWarnings.cmake  Settings.cmake  Warnings.cmake  base.cmake
common/src/: ArgumentParser.cpp  ArgumentParser.hpp  Bit.hpp  BitMask.cpp  BitMask.hpp  Body.cpp  Body.hpp  BoundingBox.hpp  BugScan.hpp  Casts.hpp  Concepts.hpp  Containers.hpp  ContextFreeGrammar.hpp  Cycle.cpp  Cycle.hpp  Debugging.hpp  DirectedGraph.hpp  Direction.cpp  Direction.hpp  Filesystem.cpp  Filesystem.hpp  Hash.hpp  IO.hpp  Intcode.cpp  Intcode.hpp  IntcodeState.cpp  IntcodeState.hpp  Interval.hpp  Logic.hpp  Main.inl  Math.hpp  OrbitGraph.hpp  Path.hpp  Point.hpp  Pose.cpp  Pose.hpp  Ranges.hpp  Robot.cpp  Robot.hpp  Runner.cpp  (+12 more)
common/test/: Tests.cpp
legacy/: day-1.py  day-3-test.txt  day-4.py
scripts/: build-c++.sh
src/main/kotlin/org/mafagafogigante/advent/: IntRoot.kt  Particle.kt  Point.kt  Point2D.kt  Point3D.kt  Solution201701.kt  Solution201702.kt  Solution201703.kt  Solution201704.kt  Solution201705.kt  Solution201706.kt  Solution201707.kt  Solution201708.kt  Solution201709.kt  Solution201710.kt  Solution201711.kt  Solution201712.kt  Solution201713.kt  Solution201714.kt  Solution201715.kt  Solution201716.kt  Solution201718.kt  Solution201719.kt  Solution201720.kt
src/test/kotlin/org/mafagafogigante/advent/: IntRootTest.kt  ParticleTest.kt  Solution201703Test.kt  Solution201709Test.kt  Solution201710Test.kt  Solution201718Test.kt  Solution201719Test.kt
